--- a/main/services.html
+++ b/main/services.html
@@ -102,7 +102,7 @@
                                 <h3><a class="color-inherit" href="#0">Basic Website</a></h3>
 
                                 <div class="margin-top-xs">
-                                    <span class="prod-card__price">$500</span>
+                                    <span class="prod-card__price">Coming Soon</span>
                                 </div>
                             </div>
                         </div>
@@ -121,7 +121,7 @@
                                 <h3><a class="color-inherit" href="#0">Web Site/ Application</a></h3>
 
                                 <div class="margin-top-xs">
-                                    <span class="prod-card__price">$1,500</span>
+                                    <span class="prod-card__price">Coming Soon</span>
                                 </div>
                             </div>
                         </div>
@@ -140,7 +140,7 @@
                                 <h3><a class="color-inherit" href="#0">Advanced Web Site</a></h3>
 
                                 <div class="margin-top-xs">
-                                    <span class="prod-card__price">$1000</span>
+                                    <span class="prod-card__price">Coming Soon</span>
                                 </div>
                             </div>
                         </div>
@@ -159,7 +159,7 @@
                                 <h3><a class="color-inherit" href="#0">Basic Website Hosting</a></h3>
 
                                 <div class="margin-top-xs">
-                                    <span class="prod-card__price">$20 Per Month</span>
+                                    <span class="prod-card__price">Coming Soon</span>
                                 </div>
                             </div>
                         </div>
@@ -178,7 +178,7 @@
                                 <h3><a class="color-inherit" href="#0">Advanced Website/App Hosting</a></h3>
 
                                 <div class="margin-top-xs">
-                                    <span class="prod-card__price">$100 per month</span>
+                                    <span class="prod-card__price">Coming Soon</span>
                                 </div>
                             </div>
                         </div>
@@ -197,7 +197,7 @@
                                 <h3><a class="color-inherit" href="#0">Email Hosting</a></h3>
 
                                 <div class="margin-top-xs">
-                                    <span class="prod-card__price">From $10</span>
+                                    <span class="prod-card__price">Coming Soon</span>
                                 </div>
                             </div>
                         </div>
