--- a/main/development.html
+++ b/main/development.html
@@ -113,7 +113,7 @@
         <div class="header-v2__wrapper">
             <div class="header-v2__container container max-width-lg">
                 <div class="header-v2__logo">
-                    <a href="#0">
+                    <a href="/">
                         <?xml version="1.0" encoding="UTF-8"?>
                         <svg width="40px" height="41px" viewBox="0 0 402 409" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
@@ -176,7 +176,7 @@
                                     </li>
 
                                     <li class="header-v2__nav-item">
-                                        <a href="#0" class="header-v2__nav-link">
+                                        <a href="/hosting.html" class="header-v2__nav-link">
                                             <svg class="header-v2__nav-icon logoSvg" aria-hidden="true" width="30px"
                                                 height="31px" viewBox="0 0 402 409" xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
@@ -195,7 +195,7 @@
                                     </li>
 
                                     <li class="header-v2__nav-item">
-                                        <a href="#0" class="header-v2__nav-link">
+                                        <a href="/seo.html" class="header-v2__nav-link">
                                             <svg class="header-v2__nav-icon logoSvg" aria-hidden="true" width="30px"
                                                 height="31px" viewBox="0 0 402 409" xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
@@ -249,7 +249,7 @@
                             <div class="header-v2__nav-dropdown header-v2__nav-dropdown--md">
                                 <ul class="header-v2__nav-list header-v2__nav-list--title-desc">
                                     <li class="header-v2__nav-item">
-                                        <a href="#difference" class="header-v2__nav-link">
+                                        <a href="/#difference" class="header-v2__nav-link">
                                             <div>
                                                 <strong>The Difference</strong>
                                                 <small>What makes me different</small>
@@ -257,7 +257,7 @@
                                         </a>
                                     </li>
                                     <li class="header-v2__nav-item">
-                                        <a href="#testimonials" class="header-v2__nav-link">
+                                        <a href="/#testimonials" class="header-v2__nav-link">
                                             <div>
                                                 <strong>Testimonials</strong>
                                                 <small>See what my customers think</small>
@@ -266,7 +266,7 @@
                                     </li>
 
                                     <li class="header-v2__nav-item">
-                                        <a href="#services" class="header-v2__nav-link">
+                                        <a href="/#services" class="header-v2__nav-link">
                                             <div>
                                                 <strong>Services</strong>
                                                 <small>Find out more about my services</small>
@@ -295,7 +295,7 @@
                             <div class="header-v2__nav-dropdown">
                                 <ul class="header-v2__nav-list">
                                     <li class="header-v2__nav-item">
-                                        <a href="https://portfolio.chrisconnelly.dev" target="_blank"
+                                        <a href="https://portfolio.chrisconnelly.dev" target="_blank" rel="noreferrer"
                                             class="header-v2__nav-link justify-between">
                                             <span>Portfolio<i class="sr-only">(opens in new window)</i></span>
                                             <svg class="icon icon--xxs" aria-hidden="true" viewBox="0 0 12 12">
@@ -311,7 +311,7 @@
                                         </a>
                                     </li>
                                     <li class="header-v2__nav-item">
-                                        <a href="https://blog.chrisconnelly.dev" target="_blank"
+                                        <a href="https://blog.chrisconnelly.dev" target="_blank" rel="noreferrer"
                                             class="header-v2__nav-link justify-between">
                                             <span>Blog<i class="sr-only">(opens in new window)</i></span>
                                             <svg class="icon icon--xxs" aria-hidden="true" viewBox="0 0 12 12">
@@ -342,11 +342,13 @@
 
                                         <div class="header-v2__nav-dropdown header-v2__nav-dropdown--nested">
                                             <ul class="header-v2__nav-list">
-                                                <li class="header-v2__nav-item"><a href="#0"
-                                                        class="header-v2__nav-link">Facebook</a></li>
-                                                <li class="header-v2__nav-item"><a href="#0"
-                                                        class="header-v2__nav-link">Instagram</a></li>
-                                                <li class="header-v2__nav-item"><a href="#0"
+                                                <li class="header-v2__nav-item"><a
+                                                        href="https://facebook.com/chrisconnellydotdev" target="_blank"
+                                                        rel="noreferrer" class="header-v2__nav-link">Facebook</a></li>
+                                                <li class="header-v2__nav-item"><a
+                                                        href="https://instagram.com/chrisconnellydotdev"
+                                                        rel="noreferrer" class="header-v2__nav-link">Instagram</a></li>
+                                                <li class="header-v2__nav-item"><a href="https://dev.to/teamallnighter"
                                                         class="header-v2__nav-link">DEV</a>
                                                 </li>
                                             </ul>
@@ -363,10 +365,10 @@
                             role="separator">
                         </li>
                         <li class="header-v2__nav-item header-v2__nav-item--main"><a
-                                href="https://portal.chrisconnelly.ca" target="_blank"
+                                href="https://portal.chrisconnelly.ca" target="_blank" rel="noreferrer"
                                 class="header-v2__nav-link">Customer Log
                                 in</a></li>
-                        <li class="header-v2__nav-item header-v2__nav-item--main"><a href="#contact"
+                        <li class="header-v2__nav-item header-v2__nav-item--main"><a href="/#contact"
                                 class="btn btn--primary">Get
                                 A
                                 Free
