--- a/main/index.html
+++ b/main/index.html
@@ -113,7 +113,7 @@
     <div class="header-v2__wrapper">
       <div class="header-v2__container container max-width-lg">
         <div class="header-v2__logo">
-          <a href="#0">
+          <a href="/">
             <?xml version="1.0" encoding="UTF-8"?>
             <svg width="40px" height="41px" viewBox="0 0 402 409" xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
@@ -149,7 +149,8 @@
                 <span>Services</span>
                 <svg class="header-v2__nav-dropdown-icon icon margin-left-xxxs" aria-hidden="true" viewBox="0 0 16 16">
                   <polyline fill="none" stroke-width="1" stroke="currentColor" stroke-linecap="round"
-                    stroke-linejoin="round" stroke-miterlimit="10" points="3.5,6.5 8,11 12.5,6.5 "></polyline>
+                    stroke-linejoin="round" stroke-miterlimit="10" points="3.5,6.5 8,11 12.5,6.5 ">
+                  </polyline>
                 </svg>
               </a>
 
@@ -174,7 +175,7 @@
                   </li>
 
                   <li class="header-v2__nav-item">
-                    <a href="#0" class="header-v2__nav-link">
+                    <a href="/hosting.html" class="header-v2__nav-link">
                       <svg class="header-v2__nav-icon logoSvg" aria-hidden="true" width="30px" height="31px"
                         viewBox="0 0 402 409" xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
@@ -193,7 +194,7 @@
                   </li>
 
                   <li class="header-v2__nav-item">
-                    <a href="#0" class="header-v2__nav-link">
+                    <a href="/seo.html" class="header-v2__nav-link">
                       <svg class="header-v2__nav-icon logoSvg" aria-hidden="true" width="30px" height="31px"
                         viewBox="0 0 402 409" xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
@@ -238,14 +239,15 @@
                 <span>About Me</span>
                 <svg class="header-v2__nav-dropdown-icon icon margin-left-xxxs" aria-hidden="true" viewBox="0 0 16 16">
                   <polyline fill="none" stroke-width="1" stroke="currentColor" stroke-linecap="round"
-                    stroke-linejoin="round" stroke-miterlimit="10" points="3.5,6.5 8,11 12.5,6.5 "></polyline>
+                    stroke-linejoin="round" stroke-miterlimit="10" points="3.5,6.5 8,11 12.5,6.5 ">
+                  </polyline>
                 </svg>
               </a>
 
               <div class="header-v2__nav-dropdown header-v2__nav-dropdown--md">
                 <ul class="header-v2__nav-list header-v2__nav-list--title-desc">
                   <li class="header-v2__nav-item">
-                    <a href="#difference" class="header-v2__nav-link">
+                    <a href="/#difference" class="header-v2__nav-link">
                       <div>
                         <strong>The Difference</strong>
                         <small>What makes me different</small>
@@ -253,7 +255,7 @@
                     </a>
                   </li>
                   <li class="header-v2__nav-item">
-                    <a href="#testimonials" class="header-v2__nav-link">
+                    <a href="/#testimonials" class="header-v2__nav-link">
                       <div>
                         <strong>Testimonials</strong>
                         <small>See what my customers think</small>
@@ -262,7 +264,7 @@
                   </li>
 
                   <li class="header-v2__nav-item">
-                    <a href="#services" class="header-v2__nav-link">
+                    <a href="/#services" class="header-v2__nav-link">
                       <div>
                         <strong>Services</strong>
                         <small>Find out more about my services</small>
@@ -282,20 +284,22 @@
                 <span>Links</span>
                 <svg class="header-v2__nav-dropdown-icon icon margin-left-xxxs" aria-hidden="true" viewBox="0 0 16 16">
                   <polyline fill="none" stroke-width="1" stroke="currentColor" stroke-linecap="round"
-                    stroke-linejoin="round" stroke-miterlimit="10" points="3.5,6.5 8,11 12.5,6.5 "></polyline>
+                    stroke-linejoin="round" stroke-miterlimit="10" points="3.5,6.5 8,11 12.5,6.5 ">
+                  </polyline>
                 </svg>
               </a>
 
               <div class="header-v2__nav-dropdown">
                 <ul class="header-v2__nav-list">
                   <li class="header-v2__nav-item">
-                    <a href="https://portfolio.chrisconnelly.dev" target="_blank"
+                    <a href="https://portfolio.chrisconnelly.dev" target="_blank" rel="noreferrer"
                       class="header-v2__nav-link justify-between">
                       <span>Portfolio<i class="sr-only">(opens in new window)</i></span>
                       <svg class="icon icon--xxs" aria-hidden="true" viewBox="0 0 12 12">
                         <g stroke-width="1" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                           fill="none">
-                          <path d="M11.5,8.5v2a1,1,0,0,1-1,1h-9a1,1,0,0,1-1-1v-9a1,1,0,0,1,1-1h2"></path>
+                          <path d="M11.5,8.5v2a1,1,0,0,1-1,1h-9a1,1,0,0,1-1-1v-9a1,1,0,0,1,1-1h2">
+                          </path>
                           <polyline points="6.5 0.5 11.5 0.5 11.5 5.5"></polyline>
                           <line x1="11.5" y1="0.5" x2="5.5" y2="6.5"></line>
                         </g>
@@ -303,13 +307,14 @@
                     </a>
                   </li>
                   <li class="header-v2__nav-item">
-                    <a href="https://blog.chrisconnelly.dev" target="_blank"
+                    <a href="https://blog.chrisconnelly.dev" target="_blank" rel="noreferrer"
                       class="header-v2__nav-link justify-between">
                       <span>Blog<i class="sr-only">(opens in new window)</i></span>
                       <svg class="icon icon--xxs" aria-hidden="true" viewBox="0 0 12 12">
                         <g stroke-width="1" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                           fill="none">
-                          <path d="M11.5,8.5v2a1,1,0,0,1-1,1h-9a1,1,0,0,1-1-1v-9a1,1,0,0,1,1-1h2"></path>
+                          <path d="M11.5,8.5v2a1,1,0,0,1-1,1h-9a1,1,0,0,1-1-1v-9a1,1,0,0,1,1-1h2">
+                          </path>
                           <polyline points="6.5 0.5 11.5 0.5 11.5 5.5"></polyline>
                           <line x1="11.5" y1="0.5" x2="5.5" y2="6.5"></line>
                         </g>
@@ -330,25 +335,29 @@
 
                     <div class="header-v2__nav-dropdown header-v2__nav-dropdown--nested">
                       <ul class="header-v2__nav-list">
-                        <li class="header-v2__nav-item"><a href="#0" class="header-v2__nav-link">Facebook</a></li>
-                        <li class="header-v2__nav-item"><a href="#0" class="header-v2__nav-link">Instagram</a></li>
-                        <li class="header-v2__nav-item"><a href="#0" class="header-v2__nav-link">DEV</a>
+                        <li class="header-v2__nav-item"><a href="https://facebook.com/chrisconnellydotdev"
+                            target="_blank" rel="noreferrer" class="header-v2__nav-link">Facebook</a></li>
+                        <li class="header-v2__nav-item"><a href="https://instagram.com/chrisconnellydotdev"
+                            rel="noreferrer" class="header-v2__nav-link">Instagram</a></li>
+                        <li class="header-v2__nav-item"><a href="https://dev.to/teamallnighter"
+                            class="header-v2__nav-link">DEV</a>
                         </li>
                       </ul>
                     </div>
                   </li>
                   <li class="header-v2__nav-item header-v2__nav-item--divider" role="separator"></li>
                   <li class="header-v2__nav-item header-v2__nav-item--label">More</li>
-                  <li class="header-v2__nav-item"><a href="#0" class="header-v2__nav-link">All My links</a></li>
+                  <li class="header-v2__nav-item"><a href="#0" class="header-v2__nav-link">All My
+                      links</a></li>
                 </ul>
               </div>
             </li>
             <li class="header-v2__nav-item header-v2__nav-item--main header-v2__nav-item--divider" role="separator">
             </li>
             <li class="header-v2__nav-item header-v2__nav-item--main"><a href="https://portal.chrisconnelly.ca"
-                target="_blank" class="header-v2__nav-link">Customer Log
+                target="_blank" rel="noreferrer" class="header-v2__nav-link">Customer Log
                 in</a></li>
-            <li class="header-v2__nav-item header-v2__nav-item--main"><a href="#contact" class="btn btn--primary">Get
+            <li class="header-v2__nav-item header-v2__nav-item--main"><a href="/#contact" class="btn btn--primary">Get
                 A
                 Free
                 Quote</a></li>
@@ -468,8 +477,7 @@
         </div>
       </div>
       <div class="margin-top-lg margin-bottom-0 padding-bottom-0" id="morePopUp1">
-        <a class="btn-fx-4 padding-y-xs padding-x-md radius-md"
-          href="/faq.html?option=com_jumi&amp;fileid=3&amp;Itemid=11" onclick="window.open(this.href,'targetWindow',
+        <a href="/faq.html?option=com_jumi&amp;fileid=3&amp;Itemid=11" onclick="window.open(this.href,'targetWindow',
       `toolbar=no,
        location=no,
        status=no,
@@ -478,8 +486,8 @@
        resizable=yes,
        width=900,
        height=600`);
-      return false;">
-          <span>MORE</span>
+      return false;" class="btn-fx-4 padding-y-xs padding-x-md radius-md">
+          <span>READ MY FAQ</span>
         </a>
       </div>
       <div class="margin-top-sm margin-bottom-0 padding-bottom-0" id="scrollDownDiv">
@@ -648,7 +656,8 @@
 
             <div class="text-center margin-top-sm">
               <h3 class="text-md">
-                <a class="color-contrast-higher" href="https://portfolio.chrisconnelly.dev" target="_blank">My
+                <a class="color-contrast-higher" href="https://portfolio.chrisconnelly.dev" target="_blank"
+                  rel="noreferrer">My
                   Portfolio</a>
               </h3>
 
@@ -657,7 +666,7 @@
               <p class="color-contrast-medium text-sm line-height-lg">See my work</p>
 
               <div class="margin-top-sm">
-                <a href="https://portfolio.chrisconnelly.dev" target="_blank">
+                <a href="https://portfolio.chrisconnelly.dev" target="_blank" rel="noreferrer">
                   <button class="reset btn-fx-3 radius-md text-sm">
                     <div class="btn-fx-3__inner padding-y-xs padding-x-md">
                       <span>PORTFOLIO</span>
@@ -687,7 +696,8 @@
 
             <div class="text-center margin-top-sm">
               <h3 class="text-md">
-                <a class="color-contrast-higher" href="https://portfolio.chrisconnelly.dev" target="_blank">FAQ</a>
+                <a class="color-contrast-higher" href="https://portfolio.chrisconnelly.dev" target="_blank"
+                  rel="noreferrer">FAQ</a>
               </h3>
 
               <div class="card-v13__separator margin-x-auto margin-y-sm" role="presentation"></div>
@@ -795,29 +805,7 @@
             </div>
           </li>
 
-          <li class="slideshow__item bg-dark text-center js-slideshow__item">
-            <div class="flex flex-center height-100%">
-              <div class="max-width-sm">
-                <figure
-                  class="testimonial-slideshow__profile-img radius-50% border border-2 border-bg margin-x-auto margin-bottom-sm"
-                  aria-hidden="true">
-                  <img src="../../../app/assets/img/testimonials-img-3.svg" alt="Olivia Gribben">
-                </figure>
 
-                <blockquote class="text-lg@md line-height-md">
-                  <p>&#34;Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi veniam maiores eum!&#34;
-                  </p>
-                </blockquote>
-
-                <footer class="margin-top-md">
-                  <cite class="text-sm">
-                    <strong>Olivia Gribben</strong>
-                    <span class="block color-contrast-medium margin-top-xxxxs">CEO at CompanyZ</span>
-                  </cite>
-                </footer>
-              </div>
-            </div>
-          </li>
         </ul>
 
         <ul>
